input on the gamesession interface displays only on desktop mode. letterButton are only clickable on mobile mode and the correctionButton is also only visible on mobile mode

--- a/src/components/pages/GameSessionInterface.css
+++ b/src/components/pages/GameSessionInterface.css
@@ -5,6 +5,10 @@
     flex-wrap: wrap;
 }
 
+.userInput {
+    display: none;
+}
+
 .word {
     display:flex;
     margin: 10px;
@@ -44,5 +48,9 @@
     }
     .correctionButton {
         display: none;
+    }
+
+    .userInput {
+        display:block;
     }
 }
